--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ body {
 }
 
 .wrap {
-    height: 700px;
+    height: 650px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -80,6 +80,13 @@ h3 {
     margin: auto;
 }
 
+.technologies {
+    margin: 25px;
+    backdrop-filter: blur(9px);
+    text-align: center;
+    letter-spacing: 1rem;
+}
+
 /* projects */
 
 .container-project {
@@ -99,10 +106,15 @@ h3 {
 }
 
 .project-box {
-    margin-top: 70px;
+    margin-top: 5%;
 }
 
-/* contacts */
+/* footer */
+.footnote {
+    text-align: center;
+    backdrop-filter: blur(12px);
+    font-size: 14px;
+}
 
 .contact-icons {
     text-align: center;
@@ -111,7 +123,7 @@ h3 {
 }
 
 .fa-telegram:hover,
-.fa-github:hover,
+.github-plus:hover,
 .fa-envelope:hover,
 .fa-telegram:focus,
 .fa-github:focus,
